[workspace]
resolver = "2"
members = [
    "apps/jet", # 14.9.2
    "crates/tpu-client", # 0.4.0
]
exclude = [
    "examples/jet-tpu-sender", # 0.1.0
]

[workspace.package]
authors = ["Triton One"]
edition = "2024"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-jet"
license = "Apache-2.0"
keywords = ["yellowstone", "solana", "rpc", "jet", "tpu", "triton"]
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3.3"
borsh = "1"
bs58 = "0.5"
bytes = "1"
cargo-lock = "10.0.1"
clap = "4.5.51"
derive_more = "2.0.1"
dotenvy = "0.15.0"
futures = "0.3"
git-version = "0.3.9"
hostname = "0.4"
http-body-util = "0.1"
humantime-serde = "1.1.1"
hyper = "1"
hyper-util = "0.1"
jsonrpsee = "0.26.0"
lazy_static = "1"
libc = "0.2.177"
maplit = "1"
pin-project = "1.1"
prometheus = "0.14.0"
prost = "0.14"
prost-types = "0.14"
protobuf-src = "1.1.0"
quinn = "0.11"
quinn-proto = "0.11"
rand = "0.10"
reqwest = "0.12.24"
retry = "2.1.0"
rustls = { version = "0.23", default-features = false }
semver = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.25"
thiserror = "2"
tikv-jemallocator = "0.6.1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.14"
tonic-build = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
vergen = "9.0.1"

# Agave Monorepo
solana-bincode = "3"
solana-client = "3"
solana-net-utils = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-streamer = "3"
solana-system-interface = "3"
solana-tls-utils = "3"
solana-transaction-status-client-types = "3"
solana-version = "3"

# Solana SDK
solana-account = "3"
solana-clock = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-epoch-info = "3"
solana-epoch-schedule = "3"
solana-hash = "4"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-native-token = "3"
solana-nonce = "3"
solana-packet = "3"
solana-program = "3"
solana-pubkey = "4"
solana-quic-definitions = "3"
solana-sdk-ids = "3"
solana-signature = "3"
solana-signer = "3"
solana-transaction = "3"
solana-transaction-error = "3"

# Yellowstone
yellowstone-grpc-client = "13"
yellowstone-grpc-proto = "12"
yellowstone-jet-tpu-client = { path = "crates/tpu-client", version = "0.4.0" }
yellowstone-shield-store = "0.9.1"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
codegen-units = 1
lto = true
