[package]
name = "yellowstone-jet-tpu-client"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Triton One Yellowstone Jet TPU Client"
keywords = ["yellowstone", "solana", "rpc", "tpu", "quic"]
readme = "README.md"
publish = true
exclude = ["src/bin/*"]
autotests = false

[[bin]]
name = "test-managed-schedule"
path = "src/bin/test-managed-schedule.rs"
required-features = ["examples"]

[[bin]]
name = "test-tpu-info"
path = "src/bin/test-tpu-info.rs"
required-features = ["examples"]

[[bin]]
name = "test-tpu-send"
path = "src/bin/test-tpu-send.rs"
required-features = ["examples"]

[[bin]]
name = "test-slot-tracker"
path = "src/bin/test-slot-tracker.rs"
required-features = ["examples"]

[[test]]
name = "test_quic_gateway"
path = "tests/test_quic_gateway.rs"
required-features = ["intg-testing"]

[features]
default = ["yellowstone-grpc"]
examples = [
    "dep:bincode",
    "dep:clap",
    "dep:dotenvy",
    "dep:solana-hash",
    "dep:solana-message",
    "dep:solana-system-interface",
    "dep:solana-transaction",
    "dep:tracing-subscriber",
    "yellowstone-grpc",
]
yellowstone-grpc = [
    "dep:solana-rpc-client",
    "dep:yellowstone-grpc-client",
    "dep:yellowstone-grpc-proto",
]
intg-testing = ["dep:tracing-subscriber"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true, optional = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env"], optional = true }
derive_more = { workspace = true, features = ["display"] }
dotenvy = { workspace = true, optional = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
quinn = { workspace = true }
retry = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"], optional = true }

# Agave Monorepo
solana-client = { workspace = true }
solana-net-utils = { workspace = true }
solana-rpc-client = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true }
solana-streamer = { workspace = true }
solana-system-interface = { workspace = true, optional = true, features = ["bincode"] }
solana-tls-utils = { workspace = true, features = ["agave-unstable-api"] }

# Solana SDK
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true, optional = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
solana-signer = { workspace = true }
solana-transaction = { workspace = true, optional = true }

# Yellowstone
yellowstone-grpc-client = { workspace = true, optional = true }
yellowstone-grpc-proto = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
serde_yaml = { workspace = true }
solana-epoch-info = { workspace = true }
